welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
	getCouleurSol()
                     ^